Updated YAML frontmatter to match GLRI and added a file variable pointing to the file name of the law.

--- a/archive/documents/legislation/national/2025-05-N-NWACT/2025-05-N-NWACT.yaml
+++ b/archive/documents/legislation/national/2025-05-N-NWACT/2025-05-N-NWACT.yaml
@@ -13,3 +13,4 @@ amendments: []
 related: []
 summary: "The National Weapons Act is to be implemented in order to establish guidelines for the possession and use of weapons and firearms."
 tags: [weapons, national, act]
+file: "2025-05-N-NWACT.pdf"
