--- a/archive/documents/legislation/national/_important/2025-01-N-C/2025-01-N-C.yaml
+++ b/archive/documents/legislation/national/_important/2025-01-N-C/2025-01-N-C.yaml
@@ -22,3 +22,4 @@ amendments:
 related: []
 summary: "First Constitution of the Kingdom of Zatsunei"
 tags: [constitution, fundamental, national]
+file: "2025-01-N-C.pdf"
