--- a/archive/documents/legislation/national/_important/2025-02-N-CC/2025-02-N-CC.yaml
+++ b/archive/documents/legislation/national/_important/2025-02-N-CC/2025-02-N-CC.yaml
@@ -13,3 +13,4 @@ amendments: []
 related: []
 summary: "The Criminal Code establishes a fundamental list of crimes and basic regulations regarding criminal justice."
 tags: [criminal, fundamental, national, justice, code]
+file: "2025-02-N-CC.pdf"
