--- a/archive/documents/legislation/national/2025/2025-02-N-CC_criminal_code/2025-02-N-CC.yaml
+++ b/archive/documents/legislation/national/2025/2025-02-N-CC_criminal_code/2025-02-N-CC.yaml
@@ -12,5 +12,4 @@ amendments: []
 
 related: []
 summary: "The Criminal Code establishes a fundamental list of crimes and basic regulations regarding criminal justice."
-tags: [criminal, fundamental, national, justice, code]
-file: "2025-02-N-CC.pdf"
+tags: [criminal, national, justice, code]
