--- a/archive/documents/legislation/national/2025/2025-03-N-NWACT_national-weapons-act/2025-03-N-NWACT.yaml
+++ b/archive/documents/legislation/national/2025/2025-03-N-NWACT_national-weapons-act/2025-03-N-NWACT.yaml
@@ -1,6 +1,6 @@
 id: 2025-03-N-NWACT
 title: "National Weapons Act"
-jurisdiction: N       # N = National
+jurisdiction: national
 
 date_first_draft: 2025-05-02
 date_enacted: 2025-05-11
