--- a/archive/documents/legislation/national/2025/2025-02-N-CC_criminal_code/2025-02-N-CC.yaml
+++ b/archive/documents/legislation/national/2025/2025-02-N-CC_criminal_code/2025-02-N-CC.yaml
@@ -1,6 +1,6 @@
 id: 2025-02-N-CC
 title: "Criminal Code"
-jurisdiction: N       # N = National
+jurisdiction: national
 
 date_first_draft: 2025-02-13
 date_enacted: 2025-05-19
